# Nagare

./: .dockerignore  .env.docker.sample  .env.sample  .gitignore  AGENT.md  CLAUDE.md  CRITICAL_REVIEW.md  DOCKER_REVIEW.md  Dockerfile  Dockerfile.superset  LICENSE  README.md  RESOLVED.md  REVIEW.md  SETUP_REVIEW.md  connections.yml  connections.yml.sample  docker-compose.yml  implementation_task.md  pyproject.toml
.claude/: AGENT.md
docker/: Dockerfile.airflow  Dockerfile.streamlit  Dockerfile.superset  superset-init.sh
docs/: 00_overview.md  99_glossary.md
docs/01_requirements/: functional.md  nonfunctional.md
docs/02_design/: architecture.md  dag_design.md  data_model.md  sequence.md
docs/03_setup/: database_setup.md  streamlit_admin.md  superset_dashboard.md
docs/04_operation/: error_handling.md
docs/05_frontend/: ui_ux_design_guidelines.md
scripts/: create_temp_tables.sql  init_db.sql  manage_repositories.py  setup-secrets.sh  setup_superset_dashboard.py
src/nagare/: __init__.py  admin_app.py  admin_db.py  admin_helpers.py  constants.py
superset/: init_views.sql
superset/queries/: README.md  failing_jobs_ranking.sql  job_duration_ranking.sql  pipeline_daily_duration.sql  pipeline_daily_success_rate.sql  repository_performance_summary.sql
tests/: conftest.py
tests/admin/: test_admin_app.py
tests/dags/: __init__.py  test_collect_github_actions_data.py  test_dag_integration.py
tests/tasks/: test_fetch.py  test_load.py  test_transform.py
tests/utils/: __init__.py  test_connections.py  test_database.py  test_database_mock.py  (+5 more)
(+31 files in other folders)
